changes made to tags and card height and author avatar image size

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-  <section id="preview-card-container">
+  <main id="preview-card-container">
     <div class="preview-card-img">
       <img src="./assets/images/illustration-article.svg" alt="featured image">
     </div>
 
-    <div class="preview-card-text">
+    <header class="preview-card-text">
       <div class="yellow-bg">
         <h4>Learning</h4>
       </div>
@@ -27,15 +27,15 @@
       </a>
       <p class="preview-text"> These languages are the backbone of every website,
          defining structure, content and presentation</p>
-    </div>
+      </header>
     <div class="blog-post-avatar-container">
       <img src="./assets/images/image-avatar.webp" alt="Blog Post Author Avatar">
       <h4>Greg Hooper</h4>
     </div>    
-  </section>
+  </main>
 
-  <section>
+  <footer>
     <p>Coded by Shankarganesh B</p>
-  </section>
+  </footer>
 </body>
 </html>
